--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
 body {
+    text-align: center;
     font-family: 'Alata';
 }
 
 .title {
-    text-align: center;
-    font-size: 100px;
+    font-size: 72px;
     margin: 0px;
 }
 
@@ -20,7 +20,7 @@ html {
 }
 
 header {
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 hr {
@@ -28,4 +28,9 @@ hr {
     border-width: 5px;
     border-style: solid;
     color: white;
+}
+
+div {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
